force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>Any additional information you think is relevant.</description>
    <inlineHelpText>Any additional information you think is relevant.</inlineHelpText>
    <label>Additional Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>