force-app/main/default/objects/ADM_Security_Questionaire__c/fields/BlackTab_enable__c.field-meta.xml
<CustomField>
    <fullName>BlackTab_enable__c</fullName>
    <description>Can the feature be enabled/disabled through BlackTab?</description>
    <inlineHelpText>Can the feature be enabled/disabled through BlackTab?</inlineHelpText>
    <label>BlackTab can enable/disable feature?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>