force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Bug_Template_to_Use__c.field-meta.xml
<CustomField>
    <fullName>Bug_Template_to_Use__c</fullName>
    <description>You can specify a bug template you would like the security team to use.</description>
    <inlineHelpText>You can specify a bug template you would like the security team to use.</inlineHelpText>
    <label>Bug Template to Use</label>
    <type>Url</type>
</CustomField>