force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Dev_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dev_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Dev contact for this feature.</description>
    <inlineHelpText>The Dev contact for this feature.</inlineHelpText>
    <label>Dev Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecQ_Dev_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>