force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Doneness__c.field-meta.xml
<CustomField>
    <fullName>Doneness__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How much of the feature testing for this team is done at the end of release</description>
    <inlineHelpText>How much of the feature testing for this team is done at the end of release</inlineHelpText>
    <label>Doneness %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>