force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Editions_available_in__c.field-meta.xml
<CustomField>
    <fullName>Editions_available_in__c</fullName>
    <description>For which Editions will this feature be available?</description>
    <inlineHelpText>For which Editions will this feature be available?</inlineHelpText>
    <label>Editions available in:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>