force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Feature_Default_On__c.field-meta.xml
<CustomField>
    <fullName>Feature_Default_On__c</fullName>
    <description>Is this feature enabled by default?</description>
    <inlineHelpText>Is this feature enabled by default?</inlineHelpText>
    <label>Feature Default On?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>