force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Func_Spec__c.field-meta.xml
<CustomField>
    <fullName>Func_Spec__c</fullName>
    <description>Link to feature Functional Spec.</description>
    <inlineHelpText>Link to feature Functional Spec.</inlineHelpText>
    <label>Func Spec</label>
    <type>Url</type>
</CustomField>