force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Link_to_test_env__c.field-meta.xml
<CustomField>
    <fullName>Link_to_test_env__c</fullName>
    <description>Link to test environment for security testing. (Optional)</description>
    <inlineHelpText>Link to test environment for security testing. (Optional)</inlineHelpText>
    <label>Link to test environment</label>
    <type>Url</type>
</CustomField>