force-app/main/default/objects/ADM_Security_Questionaire__c/fields/P4_code_path__c.field-meta.xml
<CustomField>
    <fullName>P4_code_path__c</fullName>
    <description>The Perforce code path for this feature.</description>
    <inlineHelpText>The Perforce code path for this feature.</inlineHelpText>
    <label>Code Path in Perforce</label>
    <type>TextArea</type>
</CustomField>