force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Primary_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member of the Product Security Team to which this review is assigned.</description>
    <inlineHelpText>Member of the Product Security Team to which this review is assigned.</inlineHelpText>
    <label>Primary Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecQ_Primary_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>