force-app/main/default/objects/ADM_Security_Questionaire__c/fields/ProdSec_Product_Tag__c.field-meta.xml
<CustomField>
    <fullName>ProdSec_Product_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product tag for the ProdSec team that this security questionnaire is related to</description>
    <label>ProdSec Product Tag</label>
    <referenceTo>ADM_Product_Tag__c</referenceTo>
    <relationshipLabel>Security Questionnaires</relationshipLabel>
    <relationshipName>Security_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>