force-app/main/default/objects/ADM_Security_Questionaire__c/fields/QE_Contact__c.field-meta.xml
<CustomField>
    <fullName>QE_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QE contact for this feature.</description>
    <inlineHelpText>The QE contact for this feature.</inlineHelpText>
    <label>QE Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecQ_QE_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>