force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for Doneness &lt; 100%</description>
    <inlineHelpText>Reason for Doneness &lt; 100%</inlineHelpText>
    <label>Reason for Doneness &lt; 100%</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low risk feature</fullName>
            </value>
            <value>
                <fullName>Feature unavailable for testing</fullName>
            </value>
            <value>
                <fullName>Inadequate bandwidth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>