force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Notes__c</fullName>
    <description>Reviewer Notes.</description>
    <inlineHelpText>Reviewer Notes.</inlineHelpText>
    <label>Reviewer Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>