force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Scheduled Build.</description>
    <inlineHelpText>Scheduled Build.</inlineHelpText>
    <label>Release</label>
    <referenceTo>ADM_Build__c</referenceTo>
    <relationshipLabel>Security Questionnaires</relationshipLabel>
    <relationshipName>SecQ_Scheduled_Build</relationshipName>
    <type>Lookup</type>
</CustomField>