force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Scrum Team that is building this feature.</description>
    <inlineHelpText>The Scrum Team that is building this feature.</inlineHelpText>
    <label>Product Scrum Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Security Questionnaires</relationshipLabel>
    <relationshipName>SecQ_Scrum_Team</relationshipName>
    <type>Lookup</type>
</CustomField>