force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Security_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Security_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated security user story for the team</description>
    <inlineHelpText>The associated security user story for the team</inlineHelpText>
    <label>Security User Story</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Security Questionnaires</relationshipLabel>
    <relationshipName>Security_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>