force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Tech_Spec__c.field-meta.xml
<CustomField>
    <fullName>Tech_Spec__c</fullName>
    <description>Link to feature Technical Spec.</description>
    <inlineHelpText>Link to feature Technical Spec.</inlineHelpText>
    <label>Tech Spec</label>
    <type>Url</type>
</CustomField>