force-app/main/default/objects/ADM_Security_Questionaire__c/fields/Test_Password__c.field-meta.xml
<CustomField>
    <fullName>Test_Password__c</fullName>
    <description>Password for test account. (Optional)</description>
    <inlineHelpText>Password for test account. (Optional)</inlineHelpText>
    <label>Test Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>